--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "mediafreakch",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "less": "^2.7.1",
+    "lodash": "^4.17.2",
+    "sass": "^0.5.0"
+  }
 }
