--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "less": "^2.7.1",
-    "lodash": "^4.17.2",
-    "sass": "^0.5.0"
+    "lodash": "^4.17.2"
+  },
+  "devDependencies": {
+    "jasmine": "^2.5.2"
   }
 }
